link removal for project page and tesimonies

--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
 			<ul>
 				<li><a href="about_me.html">ABOUT ME</a></li>
 				<li><a href="./project.html">PROJECTS</a></li>
-				<li><a href="../services.html">SERVICES</a></li>
+				<li><a href="#">SERVICES</a></li>
 				<li><a href="../contact_me.html">CONTACT ME</a></li>
 			</ul>
 			<button class="hamburger" id="hamburger">
