--- a/about_me/certification.html
+++ b/about_me/certification.html
@@ -19,7 +19,7 @@
 			<ul>
 				<li><a href="about_me.html" target="_blank">ABOUT ME</a></li>
 				<li><a href="../project.html">PROJECTS</a></li>
-				<li><a href="../services.html">SERVICES</a></li>
+				<li><a href="#">SERVICES</a></li>
 				<li><a href="../contact_me.html">CONTACT ME</a></li>
 			</ul>
 			<button class="hamburger" id="hamburger">
@@ -58,7 +58,7 @@
 						<li><span><a href="./experience.html">Experience</a></span></li>
 						<li><span><a href="../about_me/education.html">Education</a></span></li>
 						<li><a href="../about_me/certification.html">Certifications/Training</a></li>
-						<li><span><a href="../about_me/testimonies.html">Testimonials</a></span></li>
+						<li><span><a href="#">Testimonials</a></span></li>
 					</ul>
 				</nav>
 				<!-- The content of the navagation Tabs -->
