--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<ul id="nav-list">
 				<li><a href="about_me/about_me.html">ABOUT ME</a></li>
 				<li><a href="./project.html">PROJECTS</a></li>
-				<li><a href="./services.html">SERVICES</a></li>
+				<li><a href="#">SERVICES</a></li>
 				<li><a href="./contact_me.html">CONTACT ME</a></li>
 			</ul>
 			<button class="hamburger" id="hamburger" onclick="myFunction">
