--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
 		<nav class="navigation-bar">
 			<ul>
 				<li><a href="./about_me/about_me.html" target="_blank">ABOUT ME</a></li>
-				<li><a href="./about_me/project.html">PROJECTS</a></li>
+				<li><a href="./project.html">PROJECTS</a></li>
 				<li><a href="./services.html">SERVICES</a></li>
 				<li><a href="./contact_me.html">CONTACT ME</a></li>
 			</ul>
