linking about me path

--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
 		<!-- Navigation MENU -->
 		<nav class="navigation-bar">
 			<ul>
-				<li><a href="about_me.html">ABOUT ME</a></li>
+				<li><a href="./about_me/about_me.html">ABOUT ME</a></li>
 				<li><a href="./project.html">PROJECTS</a></li>
 				<li><a href="#">SERVICES</a></li>
 				<li><a href="../contact_me.html">CONTACT ME</a></li>
