--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				</div>
 			</div>
 			<div class="project-more">
-				<a href="https://github.com/SamuelOkoduwa/">View More</a>
+				<a href="https://github.com/SamuelOkoduwa/" target="_blank">View More</a>
 			</div>
 		</section>
 
