temporally removed the link to the project page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<nav class="navigation-bar">
 			<ul id="nav-list">
 				<li><a href="about_me/about_me.html">ABOUT ME</a></li>
-				<li><a href="./project.html">PROJECTS</a></li>
+				<li><a href="./#">PROJECTS</a></li>
 				<li><a href="#">SERVICES</a></li>
 				<li><a href="./contact_me.html">CONTACT ME</a></li>
 			</ul>
