Modified about me experience

--- a/about_me/experience.html
+++ b/about_me/experience.html
@@ -61,7 +61,7 @@
 					</ul>
 				</nav>
 				<!-- The content of the navagation Tabs -->
-				<!-- Software Engineer -->
+				<!-- Software Engineer
 				<div class="skill">
 					<h2>
 						Software Engineer at Havard Management Ng Resources Limited 
@@ -105,12 +105,12 @@
 						Help in optimizing code and applications for performance and scalability.
 					</li>
 				</ul>
-				</div>
+				</div> -->
 				<!-- IT Support -->
 				<div class="skill">
 					<h2>
 						IT Support at Eliloi Nigeria Enterprises 
-						<span>2018 - 2022</span>
+						<span>2018 - 2023</span>
 					</h2>
 				<ul>
 					<li>
